--- a/ansible-playbooks/playbooks/generate_configs.yml
+++ b/ansible-playbooks/playbooks/generate_configs.yml
@@ -39,6 +39,7 @@
     - name: Clone repository to working directory
       ansible.builtin.shell: |
         rm -rf {{ git_work_dir }}
+        mkdir {{ git_work_dir }}
         git clone --depth 1 --branch {{ git_branch }} {{ git_repo_url }} {{ git_work_dir }}
       delegate_to: localhost
       run_once: true
