--- a/services/awx/frey-awx-values.yaml
+++ b/services/awx/frey-awx-values.yaml
@@ -478,6 +478,8 @@ extraDeploy:
                   - "GitHub PAT"
                 ask_limit_on_launch: true
                 ask_variables_on_launch: true
+                extra_vars:
+                  - git_repo_url: "{{ git_repo_url }}"
                 state: present
 
             - name: Create example Job Template for generating network device configs
@@ -499,6 +501,8 @@ extraDeploy:
                   - "GitHub PAT"
                 ask_limit_on_launch: true
                 ask_variables_on_launch: true
+                extra_vars:
+                  - git_repo_url: "{{ git_repo_url }}"
                 state: present
             
             - name: Create example Job Template for deploying network device configs
@@ -520,6 +524,8 @@ extraDeploy:
                   - "GitHub PAT"
                 ask_limit_on_launch: true
                 ask_variables_on_launch: true
+                extra_vars:
+                  - git_repo_url: "{{ git_repo_url }}"
                 state: present
 
             - name: Display completion message
