adding separate config repo plus restoring netbox_purge.py to frey

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,5 @@ scripts/netbox-helpers/*
 !scripts/netbox-helpers/requirements.txt
 !scripts/netbox-helpers/seed-netbox-from-clab.py
 !scripts/netbox-helpers/bootstrap.sh
+!scripts/netbox-helpers/netbox_purge.py
 clab_netbox_sync.log
