--- a/ansible-playbooks/playbooks/generate_configs.yml
+++ b/ansible-playbooks/playbooks/generate_configs.yml
@@ -7,7 +7,7 @@
   vars:
     config_dir: "{{ playbook_dir }}/../configs/generated"
     git_work_dir: "/tmp/ansible-git-work"
-    git_repo_url: "{{ git_cfg_url }}" #Inserted in Job Template definition
+    git_repo_url: "{{ git_cfg_repo }}" #Inserted in Job Template definition
     git_branch: main
     git_user_email: "awx-{{ awx_job_id }}@frey.example"
     git_user_name: "AWX Job {{ awx_job_id }}"
