--- a/ansible-playbooks/playbooks/backup_configs.yml
+++ b/ansible-playbooks/playbooks/backup_configs.yml
@@ -1,7 +1,7 @@
 ---
 - name: Backup Arista EOS Configurations
   hosts: all
-  gather_facts: yes
+  gather_facts: no
   
   vars:
     git_work_dir: "/tmp/ansible-git-work"
