enabled eos authorization

--- a/ansible-playbooks/playbooks/backup_configs.yml
+++ b/ansible-playbooks/playbooks/backup_configs.yml
@@ -39,6 +39,7 @@
 
     - name: Backup running configuration
       arista.eos.eos_command:
+        authorize: true
         commands:
           - show running-config
       register: config_output
