removed legacy authorize and replaced with become_method

--- a/ansible-playbooks/playbooks/backup_configs.yml
+++ b/ansible-playbooks/playbooks/backup_configs.yml
@@ -39,7 +39,8 @@
 
     - name: Backup running configuration
       arista.eos.eos_command:
-        authorize: true
+        become: true
+        become_method: enable
         commands:
           - show running-config
       register: config_output
