explicitly added the enable command before sh run

--- a/ansible-playbooks/playbooks/backup_configs.yml
+++ b/ansible-playbooks/playbooks/backup_configs.yml
@@ -42,6 +42,7 @@
         become: true
         become_method: enable
         commands:
+          - enable
           - show running-config
       register: config_output
 
