--- a/ansible-playbooks/playbooks/backup_configs.yml
+++ b/ansible-playbooks/playbooks/backup_configs.yml
@@ -14,6 +14,16 @@
     git_token: "{{ lookup('env', 'GITHUB_TOKEN')}}"
       
   tasks:
+    - name: temp tshoot - show variable values
+      ansible.builtin.debug:
+        msg: |
+          git_work_dir: {{git_work_dir}}
+          git_user_email: {{git_user_email}}
+          git_user_name: {{git_user_name}}
+          git_repo_url: {{git_repo_url}}
+          git_branch: {{git_branch}}
+          git_username: {{git_username}}
+
     - name: Get timestamp from localhost
       ansible.builtin.setup:
         gather_subset:
