--- a/ansible-playbooks/playbooks/backup_configs.yml
+++ b/ansible-playbooks/playbooks/backup_configs.yml
@@ -73,6 +73,10 @@
         dest: "{{ git_work_dir }}/configs/backup/{{ inventory_hostname }}_{{ current_timestamp }}.cfg"
       delegate_to: localhost
 
+    - name: Troubleshoot - display config_output
+      ansible.builtin.debug:
+        msg: "{{ config_output.stdout[0] }}"
+
     - name: Create/update latest config symlink
       ansible.builtin.file:
         src: "{{ inventory_hostname }}_{{ current_timestamp }}.cfg"
