adding collections to AWX EE

--- a/execution-environment/Dockerfile
+++ b/execution-environment/Dockerfile
@@ -3,7 +3,7 @@ FROM quay.io/ansible/awx-ee:latest
 USER root
 
 # Install various NetDevOps collections to system location
-RUN ansible-galaxy collection install netbox.netbox:3.19.0 arista.eos:6.2.2 cisco.ios:5.3.0 cisco.iosxr:6.1.1 cisco.nxos:5.3.0 junipernetworks.junos:5.3.1 arista.avd:latest \
+RUN ansible-galaxy collection install netbox.netbox:3.19.0 arista.eos:6.2.2 cisco.ios:5.3.0 cisco.iosxr:6.1.1 cisco.nxos:5.3.0 junipernetworks.junos:5.3.1 arista.avd ansible.utils \
     --collections-path /usr/share/ansible/collections
 
 # Install pynetbox Python package
