--- a/ansible-playbooks/playbooks/generate_configs.yml
+++ b/ansible-playbooks/playbooks/generate_configs.yml
@@ -100,6 +100,7 @@
         vlans: >-
           {{ 
             query('netbox.netbox.nb_lookup',
+              validate_certs=false,
               'vlans',
               api_endpoint=vars['netbox_api'],
               token=vars['netbox_token']
